@@ -1,3 +1,7 @@
+2009-10-20 Ian Rutt
+ * libglide/glide_temp.F90: rationalised derived types in calcbmlt
+   interface. Only uses tempwk and zCoord. Builds, but not regtested.
+
 2009-10-15 Magnus Hagdorn
  * merged trunk r1321:1329 with ChangeLog changes below:
 
